--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,11 +4,11 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
-      <%= link_to @prototype.user.name, root_path, class: :prototype__user %>
+      <%= link_to @prototype.user.name,user_path(@prototype.user.id) , class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <div class="prototype__manage">
          <% if user_signed_in? && current_user.id == @prototype.user_id %>
-          <%= link_to "編集する", edit_prototype_path, class: :prototype__btn %>
+          <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype.id), method: :delete, class: :prototype__btn %>
          <% end %>
         </div>
@@ -48,7 +48,7 @@
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
             <li class="comments_list">
                <% @comments.each do |comment| %>
-              <%= link_to  comment.user.name , root_path, class: :comment_user %>
+              <%= link_to  comment.user.name , user_path(comment.user.id), class: :comment_user %>
               <%= comment.text %>
                <% end %>
             </li>
